apps/vault/resources/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - vault.v34l.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: vault
          port: 8200
